# cholesky

./: .gitignore  CMakeLists.txt  main.cpp
chol_cpp/: main.cpp
chol_py/: Cholesky.ipynb  HalfEdgeMesh.py  Utilities.py  cholesky.py  main.py  reorderStrategy.py  util.py
chol_py/.ipynb_checkpoints/: Cholesky-checkpoint.ipynb
